--- a/app/views/scripts/task/index.phtml
+++ b/app/views/scripts/task/index.phtml
@@ -38,11 +38,12 @@ $allTask = $this-> allTask;
             <tbody>
             <?php foreach ($allTask as $task): ?>
                 <tr>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['id']); ?></td>    
                 <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['title']); ?></td>
                 <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['status']); ?></td>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['starTime']); ?></td>
+                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['deadLine']); ?></td>
                 <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['user']); ?></td>
-                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['startDate']); ?></td>
-                <td class="px-6 py-4 whitespace-nowrap text-gray-300"><?php echo htmlspecialchars($task['deadline']); ?></td>
                 </tr>
                 <?php endforeach; ?>
         
