--- a/app/views/scripts/task/delete.phtml
+++ b/app/views/scripts/task/delete.phtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear tarea</title>
+    <title>Eliminar tarea</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"  rel="stylesheet" />
 </head>
 <body>
@@ -15,12 +15,8 @@
 </div>
 
 <form action="<?php echo WEB_ROOT; ?>/delete" method="POST" class="max-w-md mx-auto">
-  <div class="relative z-0 w-full mb-5 group">
-      <input type="number" name="id" value="<?php echo $this->task['id']; ?>" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer" placeholder=" " required />
-      <label for="id" class="peer-focus:font-medium absolute text-sm text-white dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Id</label>
-  </div>
-
-  <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Eliminar</button>
-  
+<label for="task_id">Ingrese el ID de la tarea a eliminar:</label>
+    <input type="number" name="task_id" id="task_id" required />
+    <button type="submit">Eliminar tarea</button>
 </body>
 </html>
