--- a/app/views/scripts/task/index.phtml
+++ b/app/views/scripts/task/index.phtml
@@ -18,7 +18,7 @@ $allTask = $this-> allTask;
             <span class="flex items-center text-2xl font-bold text-white dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-blue-600 rounded-full me-1.5 flex-shrink-0"></span>
             <a href="<?php echo WEB_ROOT ?>/create"> Crear </a> </span>
             <span class="flex items-center text-2xl font-bold text-white dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-purple-500 rounded-full me-1.5 flex-shrink-0"></span>
-            <a href="<?php echo WEB_ROOT ?>/update"> Editar </a> </span>
+            <a href="<?php echo WEB_ROOT ?>/updateId"> Editar </a> </span>
             <span class="flex items-center text-2xl font-bold text-white dark:text-white me-3"><span class="flex w-2.5 h-2.5 bg-indigo-500 rounded-full me-1.5 flex-shrink-0"></span>
             <a href="<?php echo WEB_ROOT ?>/delete"> Eliminar </a> </span>
             
